<resources>
    <string name="app_name">Task Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="_23_59">23:59</string>
    <string name="upcoming">UPCOMING</string>
    <string name="sat">Sat</string>
    <string name="_01">01</string>
    <string name="dec">Dec</string>
    <string name="all_task">All Task</string>
    <string name="add">Add +</string>
    <string name="task_manager">Task Manager</string>
    <string name="add_new_task">Add New Task</string>
    <string name="add_task">Add Task</string>
    <string name="fill_the_task_details">Fill the task details</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="task_date">Task Date</string>
    <string name="task_time">Task Time</string>
    <string name="select_task_date">Select Task Date</string>
    <string name="ok">ok</string>
    <string name="clear_all">Clear All</string>
    <string name="complete_task">Complete Task</string>
    <string name="update_task">Update Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="no_data_found">No Data Found</string>
    <string name="warning">Warning</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="calendar">Calendar</string>
    <string name="close">Close</string>
    <string name="event">event</string>
</resources>