<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="5dp"
    android:elevation="3dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingVertical="8dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="3"
            android:id="@+id/layout_date"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_day_of_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/sat"
                android:textColor="@color/gray"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_day_of_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_01"
                android:textColor="@color/blue"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/dec"
                android:textColor="@color/gray"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:id="@+id/line1"
            app:layout_constraintStart_toEndOf="@id/layout_date"
            android:background="@color/gray"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/line1"
            android:text="@string/title"
            android:textSize="17sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/tv_title"
            />
        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            android:text="@string/title"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/gray"
            />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_desc"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            android:text="@string/_23_59"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/gray"
            />

        <TextView
            android:id="@+id/tv_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/upcoming"
            android:textSize="14sp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/iv_menu"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/icon_menu"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>